--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 NETWORK_NAME=skcript
 
-ORG1_HOSTNAME=ip-172-31-2-93
-ORG2_HOSTNAME=ip-172-31-4-31
-ORG3_HOSTNAME=ip-172-31-15-10
+ORG1_HOSTNAME=yogesh-VM
+ORG2_HOSTNAME=yogesh-VM
+ORG3_HOSTNAME=yogesh-VM
 
 
 ZK_COMPOSE_PATH=$PWD/kafka-zookeeper/docker-compose-zookeeper.yml
