--- a/org2/docker-compose-peer.yml
+++ b/org2/docker-compose-peer.yml
@@ -17,7 +17,7 @@ services:
         max_attempts: 3
       placement:
         constraints:
-          - node.hostname == ${ORG2_HOSTNAME}
+          - node.hostname == yogesh-VM
     image: hyperledger/fabric-peer:x86_64-1.1.0
     hostname: peer0.org2.example.com
     environment:
@@ -76,7 +76,7 @@ services:
         max_attempts: 3
       placement:
         constraints:
-          - node.hostname == ${ORG2_HOSTNAME}
+          - node.hostname == yogesh-VM
     image: hyperledger/fabric-peer:x86_64-1.1.0
     hostname: peer1.org2.example.com
     environment:
