--- a/org2/docker-compose-services.yml
+++ b/org2/docker-compose-services.yml
@@ -21,7 +21,7 @@ services:
                 max_attempts: 3
             placement:
                 constraints:
-                    - node.hostname == ${ORG3_HOSTNAME}
+                    - node.hostname == yogesh-VM
         image: hyperledger/fabric-ca:x86_64-1.1.0
         hostname: ca.org2.example.com
         environment:
@@ -44,7 +44,7 @@ services:
                 max_attempts: 3
             placement:
                 constraints:
-                    - node.hostname == ${ORG2_HOSTNAME}
+                    - node.hostname == yogesh-VM
         image: hyperledger/fabric-couchdb:x86_64-0.4.6
         hostname: couchdb0_org2
         networks:
@@ -59,7 +59,7 @@ services:
                 max_attempts: 3
             placement:
                 constraints:
-                    - node.hostname == ${ORG2_HOSTNAME}
+                    - node.hostname == yogesh-VM
         image: hyperledger/fabric-couchdb:x86_64-0.4.6
         hostname: couchdb1_org2
         networks:
