--- a/kafka-zookeeper/docker-compose-kafka.yml
+++ b/kafka-zookeeper/docker-compose-kafka.yml
@@ -16,7 +16,7 @@ services:
         max_attempts: 3
       placement:
         constraints:
-          - node.hostname == yogesh-VM
+          - node.hostname == ip-172-31-15-10
     hostname: kafka0
     image: hyperledger/fabric-kafka
     # Give network alias
@@ -45,7 +45,7 @@ services:
         max_attempts: 3
       placement:
         constraints:
-          - node.hostname == yogesh-VM
+          - node.hostname == ip-172-31-15-10
     hostname: kafka1
     image: hyperledger/fabric-kafka
     # Give network alias
@@ -74,7 +74,7 @@ services:
         max_attempts: 3
       placement:
         constraints:
-          - node.hostname == yogesh-VM
+          - node.hostname == ip-172-31-15-10
     hostname: kafka2
     image: hyperledger/fabric-kafka
     # Give network alias
@@ -103,7 +103,7 @@ services:
         max_attempts: 3
       placement:
         constraints:
-          - node.hostname == yogesh-VM
+          - node.hostname == ip-172-31-15-10
     hostname: kafka3
     image: hyperledger/fabric-kafka
     # Give network alias
