--- a/org1/docker-compose-services.yml
+++ b/org1/docker-compose-services.yml
@@ -21,7 +21,7 @@ services:
                 max_attempts: 3
             placement:
                 constraints:
-                    - node.hostname == yogesh-VM
+                    - node.hostname == ip-172-31-4-31
         image: hyperledger/fabric-ca:x86_64-1.1.0
         hostname: ca.org1.example.com
         environment:
@@ -44,7 +44,7 @@ services:
                 max_attempts: 3
             placement:
                 constraints:
-                    - node.hostname == yogesh-VM
+                    - node.hostname == ip-172-31-4-31
         image: hyperledger/fabric-tools:x86_64-1.1.0
         tty: true
         hostname: cli
@@ -84,7 +84,7 @@ services:
                 max_attempts: 3
             placement:
                 constraints:
-                    - node.hostname == yogesh-VM
+                    - node.hostname == ip-172-31-4-31
         image: hyperledger/fabric-couchdb:x86_64-0.4.6
         hostname: couchdb0_org1
         networks:
@@ -99,7 +99,7 @@ services:
                 max_attempts: 3
             placement:
                 constraints:
-                    - node.hostname == yogesh-VM
+                    - node.hostname == ip-172-31-4-31
         image: hyperledger/fabric-couchdb:x86_64-0.4.6
         hostname: couchdb1_org1
         networks:
